# digstore

./: .digignore  .digstore  .gitattributes  .gitignore  90-datastore-coin-requirements.md  BLOCKCHAIN_TESTING_RESULTS.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.template  DATASTORE_COIN_IMPLEMENTATION_SUMMARY.md  DEMO.md  FINAL_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  README.md  SECURITY.md  action.yml  build.rs  config.json  crates.js  debug-get-command.ps1  debug_test.txt  deny.toml  fresh_test.txt  help.html  import_wallet.py  install.ps1  install.sh  new_file.txt  proof.json  proof_example.txt  proof_example_readable.json  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  src-files.js  staged1.txt  staged2.txt  staging_debug.txt  (+5 more)
crates/dig-client-wasm/: .gitignore  Cargo.toml  PUBLISHED_README.md  README.md  package.json  smoke.mjs
crates/dig-client-wasm/examples/: gen_smoke_fixture.rs
crates/dig-client-wasm/scripts/: assemble-pkg.mjs  verify-pkg.mjs
crates/dig-client-wasm/src/: crypto.rs  lib.rs
crates/dig-client-wasm/tests/: parity.rs
crates/dig-node/: Cargo.toml  SPEC.md
crates/dig-node/src/: dht.rs  download.rs  lib.rs  main.rs  net.rs  peer.rs  pex.rs  relay.rs
crates/dig-node/tests/: dht_integration.rs  peer_network.rs  relay_connection.rs
crates/dig-resolver/: Cargo.toml
crates/dig-resolver/src/: main.rs
crates/dig-runtime/: Cargo.toml
crates/dig-runtime/src/: lib.rs
crates/dig-wallet/: Cargo.toml
crates/dig-wallet/src/: lib.rs  main.rs  settings.html  ui.html  wc-bundle.js
crates/dig-wallet/wc/: .gitignore  build.mjs  entry.js  entry.test.mjs  package.json  qr.js  requester.js  signer.js
crates/digstore-chain/: Cargo.toml
crates/digstore-chain/examples/: anchor_prototype.rs
crates/digstore-chain/src/: anchor.rs  cat.rs  chip0002.rs  clawback.rs  coinset.rs  collection.rs  collection_index.rs  config.rs  did.rs  dig.rs  error.rs  fs_util.rs  keys.rs  lib.rs  metadata.rs  nft.rs  offer.rs  option.rs  seed.rs  send.rs  singleton.rs  streaming.rs  unlock.rs  vault.rs  vc.rs  wallet.rs
crates/digstore-chain/tests/: hd_live_balance.rs
crates/digstore-cli/: Cargo.toml  build.rs
crates/digstore-cli/assets/: dev-shim.js
crates/digstore-cli/src/: beacon.rs  branding.rs  cli.rs  config.rs  context.rs  dig_toml.rs  error.rs  lib.rs  main.rs  output.rs  runtime.rs  templates.rs  workspace.rs
crates/digstore-cli/tests/: adv_delegated_host_key.rs  adv_host_no_inspect.rs  adv_self_serve.rs  cli_add.rs  cli_add_status.rs  cli_anchor.rs  cli_assets.rs  cli_balance.rs  cli_cat_roundtrip.rs  cli_chain_verify.rs  cli_checkout.rs  cli_commit_dryrun.rs  cli_commit_log.rs  cli_deploy.rs  cli_dev.rs  cli_diff.rs  cli_dig_cost.rs  cli_discovery.rs  cli_doctor.rs  cli_errors.rs  cli_help.rs  cli_help_json.rs  cli_init.rs  cli_link_onboard.rs  cli_multistore.rs  cli_new.rs  cli_private_salt.rs  cli_remote_clone_push_pull.rs  cli_revoke_tombstone.rs  cli_status.rs  cli_tamper.rs  cli_terminology.rs  e2e_mainnet.rs  ops_roundtrip.rs  seed_cmd.rs
crates/digstore-compiler/: Cargo.toml  build.rs
crates/digstore-compiler/fixtures/: digstore_guest_template.wat
crates/digstore-compiler/src/: atomic_write.rs  chunk_index.rs  config.rs  data_section.rs  error.rs  filler.rs  inject.rs  key_table.rs  lib.rs  obfuscate.rs  pipeline.rs  pool.rs  template.rs
crates/digstore-compiler/tests/: auth_policy.rs  chunk_index.rs  compiler_version.rs  data_section_golden.rs  determinism.rs  filler.rs  import_section.rs  inject.rs  key_table.rs  large_data_section.rs  obfuscation.rs  pipeline.rs  secretless.rs  self_serving.rs
crates/digstore-core/: Cargo.toml
crates/digstore-core/src/: abi.rs  bytes.rs  capsule.rs  config.rs  crypto.rs  datasection.rs  error.rs  hash.rs  keytable.rs  lib.rs  manifest.rs  merkle.rs  tombstone.rs  urn.rs  urn_grammar.rs  wire.rs
crates/digstore-core/tests/: abi.rs  bytes.rs  capsule.rs  codec_primitives.rs  codec_structs.rs  config.rs  conventions_paths.rs  datasection.rs  error.rs  keytable.rs  manifest.rs  merkle.rs  section_header.rs  serving.rs  tombstone.rs  urn.rs  urn_conformance.rs  wire_content.rs  wire_proof.rs
crates/digstore-crypto/: Cargo.toml
crates/digstore-crypto/examples/: gen_fixtures.rs
crates/digstore-crypto/src/: aead.rs  bls.rs  error.rs  fixtures.rs  hash.rs  kdf.rs  lib.rs
crates/digstore-crypto/tests/: aead_roundtrip.rs  bls_fixtures.rs  bls_roundtrip.rs  crypto_error.rs  hash_kat.rs  kdf_kat.rs
crates/digstore-guest/: Cargo.toml
crates/digstore-guest/src/: abi.rs  allocator.rs  attestation.rs  content.rs  data_stub.rs  datasection.rs  decoy.rs  host.rs  imports.rs  jwt.rs  lib.rs  metadata.rs  obfuscation_hooks.rs  oblivious.rs  packing.rs  proof.rs  request.rs  session.rs  temporal.rs
crates/digstore-guest/tests/: abi_roundtrip.rs  attest_freshness.rs  attest_nonce.rs  attestation.rs  content_proof.rs  decoy.rs  fixtures.rs  merkle_proof.rs  metadata.rs  mock_host.rs  oblivious.rs  session_jwt.rs  temporal.rs  wasm_smoke.rs
crates/digstore-host/: Cargo.toml
crates/digstore-host/examples/: verify_served.rs
crates/digstore-host/src/: clock.rs  config.rs  error.rs  imports.rs  lib.rs  memory.rs  random.rs  runtime.rs  serve_blind.rs  session.rs  state.rs  teehook.rs
crates/digstore-host/tests/: bounds.rs  dighost_serve.rs  e2e_guest.rs  imports_unit.rs  instantiate.rs  jwks_mock.rs  return_buffer.rs  serve_flow.rs
crates/digstore-prover/: Cargo.toml  build.rs
crates/digstore-prover/guest/: Cargo.toml
crates/digstore-prover/src/: chain.rs  coinset.rs  commitment.rs  error.rs  hardware.rs  lib.rs  mock.rs  mock_chain.rs  prover.rs  risc0_backend.rs  serving_inputs.rs
crates/digstore-prover/tests/: chain_freshness.rs  coinset_live.rs  coinset_parse.rs  hardware_attest.rs  mock_roundtrip.rs  node_attribution.rs  nonce_binding.rs  program_hash.rs  public_output.rs  risc0_smoke.rs  roothash_binding.rs  trait_object_safety.rs
crates/digstore-remote/: Cargo.toml
crates/digstore-stage/: Cargo.toml  build.rs
crates/digstore-store/: Cargo.toml
(+1598 files in other folders)
