[workspace]
resolver = "2"
members = ["crates/digstore-core", "crates/digstore-chunker", "crates/digstore-crypto", "crates/digstore-store", "crates/digstore-guest", "crates/digstore-prover"]
exclude = ["crates/digstore-prover/guest"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
sha2 = "0.10"
proptest = "1"
hex = "0.4"
