[workspace]
resolver = "2"
members = ["crates/digstore-core", "crates/digstore-chunker", "crates/digstore-crypto", "crates/digstore-store", "crates/digstore-guest", "crates/digstore-prover", "crates/digstore-host", "crates/digstore-compiler", "crates/digstore-remote", "crates/digstore-cli", "crates/digstore-chain"]
exclude = ["crates/digstore-prover/guest"]

[workspace.package]
edition = "2021"
version = "0.5.5"
license = "GPL-2.0-only"

[workspace.dependencies]
sha2 = "0.10"
proptest = "1"
hex = "0.4"

# Release hardening: keep integer-overflow checks ON in release builds. This
# code parses untrusted serialized input and does offset/length arithmetic;
# silent wrapping in release would turn a length-overflow bug into a memory
# safety / logic hazard. Cost is negligible for this workload.
[profile.release]
overflow-checks = true
debug-assertions = false
panic = "unwind"
