[package]
name = "dig-client-wasm"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
description = "Browser read-crypto for dighub: URN reconstruction, AES-256-GCM-SIV decryption, and merkle inclusion-proof verification, compiled to WASM (globalThis.digClient)."

# NOTE: this crate is intentionally EXCLUDED from the digstore_wasm workspace
# (see ../../Cargo.toml `exclude`). The workspace pulls in `digstore-crypto`,
# which depends on `chia-bls` -> `blst` (a C/asm library that does NOT compile to
# wasm32-unknown-unknown) and on `getrandom` (which needs the browser `js`
# shim). The READ path needs neither BLS nor randomness, so this leaf crate is
# resolved independently: it depends only on `digstore-core` (pure, no_std-
# capable, wasm-clean) plus the SAME `aes-gcm-siv` / `hkdf` / `sha2` crate
# versions `digstore-crypto` uses, with byte-identical domain constants. Parity
# with the on-chain/format crypto is enforced by `tests/parity.rs` (a NATIVE
# dev-test that cross-checks output against the real `digstore-crypto`).

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# URN parsing/canonicalization, MerkleProof codec + verify, Bytes32, sha256.
# Default features (std + serde) are off: we only need the pure `alloc` core.
digstore-core = { path = "../digstore-core", default-features = false }

# Read-crypto primitives. `aes-gcm-siv` default features are DISABLED so it does
# not drag in `getrandom` (decryption under a fixed nonce needs no RNG); we keep
# only the `aes` backend + `alloc`. These versions MUST match digstore-crypto.
aes-gcm-siv = { version = "0.11", default-features = false, features = ["aes", "alloc"] }
hkdf = "0.12"
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# wasm-bindgen surface.
wasm-bindgen = "0.2"
js-sys = "0.3"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[dev-dependencies]
# NATIVE-ONLY parity oracle: prove our reimplemented KDF/AEAD/URN produce
# byte-identical output to the canonical host-side crypto.
digstore-crypto = { path = "../digstore-crypto" }
wasm-bindgen-test = "0.3"

[profile.release]
# Read-crypto in the browser: optimize for small wasm.
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true
