[package]
name = "dig-wallet"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
description = "DIG Browser built-in Chia wallet sidecar: a local axum server (using digstore-chain + chia-wallet-sdk over coinset.org) that serves a Sage-mirroring wallet UI. Native Rust so BLS signing works; the browser opens it at 127.0.0.1."

[lib]
name = "dig_wallet"
path = "src/lib.rs"

[[bin]]
name = "dig-wallet"
path = "src/main.rs"

[dependencies]
digstore-chain = { path = "../digstore-chain" }
# The canonical Capsule (storeId:rootHash) identity, rendered by the /api/stores
# endpoint via Capsule::canonical(). Same type digstore-chain's store discovery returns.
digstore-core = { path = "../digstore-core" }
dig-node = { path = "../dig-node" }
chia-protocol = "0.26"
# Needed to NAME the SDK spendable `Cat` type when assembling a make-offer's
# MakerFunds (the offered CAT coins, with lineage proofs, from digstore-chain).
chia-wallet-sdk = { version = "0.30", features = ["offer-compression"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
