[package]
name = "digstore-chain"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
async-trait = "0.1"
bip39 = { version = "2", features = ["rand"] }
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
dirs = "5"
datalayer-driver = "3"
chia = "0.26"
chia-protocol = "0.26"
chia-sha2 = "0.26"
chia-sdk-coinset = "0.30"
# chip-0035 exposes the DataLayer driver primitives (Launcher::mint_datastore, etc.) so we
# can replicate chip35's mint with the digstore-scoped owner hint memo (datalayer_driver's
# mint_store hardcodes a single launcher hint and exposes no hint parameter).
chia-wallet-sdk = { version = "0.30", features = ["chip-0035"] }
hex = "0.4"
hex-literal = "0.4"
indexmap = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
# Decode a built coin spend's conditions in the send tests (verify the payment output).
clvmr = "0.14"
clvm-traits = "0.26"
