[package]
name = "digstore-cli"
version = "0.5.3"
edition = "2021"

[[bin]]
name = "digstore"
path = "src/main.rs"

[lib]
name = "digstore_cli"
path = "src/lib.rs"

[dependencies]
digstore-core = { path = "../digstore-core" }
digstore-chain = { path = "../digstore-chain" }
rpassword = "7"
zeroize = "1"
digstore-store = { path = "../digstore-store" }
digstore-chunker = { path = "../digstore-chunker" }
digstore-compiler = { path = "../digstore-compiler" }
digstore-host = { path = "../digstore-host" }
digstore-prover = { path = "../digstore-prover" }
digstore-remote = { path = "../digstore-remote" }
digstore-crypto = { path = "../digstore-crypto" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
chia-protocol = "0.26"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
hex = "0.4"
getrandom = "0.2"
anstream = "0.6"
anstyle = "1"
ignore = "0.4"
globset = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
axum = "0.7"
