[package]
name = "digstore-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "digstore_core"
path = "src/lib.rs"

[features]
default = ["std", "serde"]
std = ["sha2/std", "hex/std", "serde_json/std"]
serde = ["dep:serde"]

[dependencies]
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
