[package]
name = "digstore-guest"
license = "GPL-2.0-only"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enables std + the MockHost path so guest logic runs as a native lib under `cargo test`.
native-test = ["std", "digstore-core/std"]
std = []

[dependencies]
digstore-core = { path = "../digstore-core", default-features = false }
bls12_381 = { version = "0.8", default-features = false, features = ["alloc", "pairings", "groups", "experimental"] }
rsa = { version = "0.9", default-features = false, features = ["sha2"] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10", default-features = false }
# bls12_381 0.8's experimental hash-to-curve `ExpandMsgXmd<H: Digest>` is bound to
# the digest 0.9 trait family, so it needs a digest-0.9-compatible hasher. sha2
# 0.10 implements digest 0.10. We add sha2 0.9 (digest 0.9) under an alias used
# ONLY for the AugScheme hash-to-G2 expand step; all other hashing uses sha2 0.10.
sha2_v09 = { package = "sha2", version = "0.9", default-features = false }
chacha20 = { version = "0.9", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
digstore-crypto = { path = "../digstore-crypto" }
serde_json = { version = "1", default-features = false, features = ["alloc", "std"] }
hex = "0.4"
wasmparser = "0.221"
rand_chacha = "0.3"
rand_core = "0.6"
