[package]
name = "digstore-host"
version = "0.1.0"
edition = "2021"
description = "wasmtime runtime for serving compiled Digstore WASM modules (paper 6.3, 6.4, 18)."

[dependencies]
digstore-core = { path = "../digstore-core" }
digstore-crypto = { path = "../digstore-crypto" }
digstore-prover = { path = "../digstore-prover" }
wasmtime = { version = "45", default-features = false, features = ["std", "cranelift", "runtime", "gc", "gc-drc", "gc-null", "threads", "pooling-allocator", "parallel-compilation"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1"

[dev-dependencies]
wat = "1"
httpmock = "0.7"
